# NEXTSim

./: .gitignore  CMakeLists.txt  README  README.md  SiPMHits.cpp  SiPMHits.hh  SimEnv.sh  neutronDetectorDesign.cc  version.sh
ROOT_macros/: AnlClass.C  AnlClass.h  Anl_hex.C  Anl_hex.h  Anl_hex2.C  Anl_hex2.h  Compare_cut.C  TimingClass.C  TimingClass.h
ROOT_macros/mac/: .gps.mac.swp  gps.mac  gps_array.mac  gps_hex.mac  run.mac  vis.mac
cmake/: changelog.sh  version.sh
cmake/modules/: FindROOT.cmake
dict/: CMakeLists.txt  def.struct
dict/include/: LinkDef.h  Structures.hpp  nDetStructures.hpp
dict/source/: Structures.cpp  nDetStructures.cpp
doc/: doxfile
doc/markdown/: reactionSource.md  segmentedDetector.md  segmentedPMT.md
include/: CfSource.hh  G4MultipleScattering.hh  G4hLowEnergyLoss.hh  GLG4OpAttenuation.hh  GLG4Scint.hh  HitMatrix.hh  LENSLongGeneralPhysics.hh  LENSLongHadronPhysics.hh  LENSLongIndiumTinNeutrinoPhysics.hh  LENSLongIonPhysics.hh  LENSLongLeptonPhysics.hh  LENSLongParticles.hh  LENSLongPhysicsList.hh  ParticleSource.hh  ParticleSourceMessenger.hh  PhotonList.hh  SiPMConstruction.hh  SiPMHits.hh  SiPMSD.hh  centerOfMass.hh  cmcalc.hh  gdmlSolid.hh  local_g4compat.hh  messengerHandler.hh  nDetActionInitialization.hh  nDetAnalysisManager.hh  nDetAnalysisMessenger.hh  nDetConstruction.hh  nDetConstructionMessenger.hh  nDetDataPack.hh  nDetDetector.hh  nDetDetectorLayer.hh  nDetDetectorMessenger.hh  nDetDetectorTypes.hh  nDetDynamicMaterial.hh  nDetEventAction.hh  nDetHits.hh  nDetMasterOutputFile.hh  nDetMasterOutputFileMessenger.hh  nDetMaterials.hh  (+24 more)
mac/: 252Cf.mac  bar.mac  ellipse.mac  gdml.mac  gps.mac  gps_Co60.mac  gps_array_1MeV_neutron.mac  gps_bar.mac  gps_bar_1MeV_neutron.mac  gps_hex.mac  next.mac  plate.mac  run.mac  test.mac  vandle.mac  vis.mac
materials/: ej200.mat  ej276.mat  teflon.mat  yso.mat
olaInclude/: ActionInitialization.hh  AnalysisManager.hh  ArgoneAuxDet.hh  ArgoneBeamLine.hh  ArgoneBetaDet.hh  ArgoneFrame.hh  ArgoneGeArray.hh  ArgoneHPGeHolder.hh  ArgoneLN2Tank.hh  ArgoneTapeBox.hh  ArgoneVandleArray.hh  Beta.hh  CERNFloor.hh  CERNFrame.hh  CERNSupport.hh  CERNTapeBox.hh  CERNVandleArray.hh  Ceil.hh  CloverQuadBuchDetector.hh  CloverQuadDetector.hh  CloverSingleBuchDetector.hh  CloverSingleBuchHit.hh  CloverSingleBuchSD.hh  CloverSingleDetector.hh  CloverSingleHit.hh  CloverSingleSD.hh  Cubic_Chamber.hh  Decay.hh  DetectorConstruction.hh  EMPhysics.hh  EventAction.hh  Exception.hh  FermiDistribution.hh  Floor.hh  Gamma.hh  GeneralPhysics.hh  HPGe.hh  IS530_Chamber.hh  IS530_Plastic.hh  LeribssBeam.hh  (+30 more)
olaSrc/: CERNFrame.cc  CERNSupport.cc  CERNTapeBox.cc  IS530_Chamber.cc  IS530_Plastic.cc
share/: CMakeLists.txt
share/modulefiles/: nextSim
source/: ArgoneFrame.cc  CERNFloor.cc  CERNSupport.cc  CERNVandleArray.cc  CMakeLists.txt  CloverQuadBuchDetector.cc  CloverQuadDetector.cc  CloverSingleBuchDetector.cc  CloverSingleDetector.cc  DetectorConstruction.cc  IS530_Chamber.cc  IS530_Plastic.cc  MaterialsManager.cc  ParticleSource.cc  ParticleSourceMessenger.cc  Polyhedron.cc  RIKENFloor.cc  RIKENSupport.cc  Tape.cc  centerOfMass.cc  cmcalc.cc  gdmlSolid.cc  messengerHandler.cc  nDetActionInitialization.cc  nDetConstruction.cc  nDetConstructionMessenger.cc  nDetDataPack.cc  nDetDetector.cc  nDetDetectorLayer.cc  nDetDetectorMessenger.cc  nDetDetectorTypes.cc  nDetDynamicMaterial.cc  nDetEventAction.cc  nDetMasterOutputFile.cc  nDetMasterOutputFileMessenger.cc  nDetMaterials.cc  nDetMaterialsMessenger.cc  nDetParticleSource.cc  nDetParticleSourceMessenger.cc  nDetRunAction.cc  (+14 more)
spectral/: hamamatsuH12700A.root
src/: CfSource.cc  HitMatrix.cc  ParticleSource.cc  PhotonList.cc  SiPMConstruction.cc  SiPMHits.cc  SiPMSD.cc  centerOfMass.cc  gossipGUI.cpp  messengerHandler.cc  nDetAnalysisManager.cc  nDetAnalysisMessenger.cc  nDetConstruction.cc  nDetConstructionMessenger.cc  nDetEventAction.cc  nDetHits.cc  nDetPhysicsList.cc  nDetPrimaryAction.cc  nDetRunAction.cc  nDetRunActionMessenger.cc  nDetSD.cc  nDetStackingAction.cc  nDetSteppingAction.cc  nDetTrackingAction.cc  nDetUserEventInformation.cc  nDetUserTrackingInformation.cc  photonCounter.cc  pmtResponse.cc  sipmMC.cc
stl/: LightGuide3in.stl
tools/: CMakeLists.txt
tools/source/: CMakeLists.txt  macroReader.cc  nextCmdSearch.cc  nextConvert.cc  nistList.cc
